# SimRoki

./: Act as a robotics research analyst and produce a d.md  Cargo.toml  README.md  cassie_gait_training_guide.md  motion_sequence.json  robot_config.saved.toml  robot_config.toml  table-1776332272825.csv
RL/: README.md  TECH_PLAN_2D_BIPED.md
RL/KNP/: README_INTEGRATION.md  REPORT_KNP_2026-04-09.md  _ppo_curriculum_smoke.json  _ppo_curriculum_smoke.pkl  _sb3_smoke.pkl  compare_walk_trainers.py  desktop_rl_env.py  eval_sb3_ppo_walk.py  eval_sb3_sac_walk.py  gymnasium_robot_env.py  gymnasium_smoke_test.py  hybrid_env_smoke_test.py  kmp_best_config.json  kmp_optimization_history.json  knp_walk_kick_best.npz  knp_walk_kick_best_pre_residual_backup.npz  knp_walk_kick_train.py  knp_walk_kick_training.json  knp_walk_kick_training_apr09.json  knp_walk_kick_training_hybrid.json  (+168 more)
biped_2d_research_package/: biped_2d_reading_map.md  closed_papers_notes.md  implementation_notes.md  open_papers_fulltext.md
logs/: pid_check.txt  pid_check2.txt  train_curriculum.err  train_curriculum_live.pid  train_curriculum_live2.pid  train_curriculum_stable.pid  train_curriculum_stable2.pid  train_curriculum_stable_finetune.pid  train_curriculum_stable_finetune2.pid  train_curriculum_v2.err  train_curriculum_v3.err  train_curriculum_v5.err  train_curriculum_v6.err
python-sdk/: README.md  build_native_wheel.ps1  pyproject.toml  setup.cfg
python-sdk/examples/: ffi_smoke_test.py
python-sdk/robot_sim_client.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
sim_core/: Cargo.toml
(+5 files in other folders)
