[workspace]
members = ["sim_core", "native_app"]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
anyhow = "1.0"
axum = "0.8"
macroquad = "0.4"
nalgebra = { version = "0.33", features = ["serde-serialize"] }
rapier2d = { version = "0.23", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
