[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robot-sim-client"
version = "0.3.0"
description = "Python wrapper for the five-link robot simulator with HTTP and direct FFI control"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["requests>=2.31"]

[project.scripts]
simctl = "robot_sim.cli:main"

[project.optional-dependencies]
rl = ["numpy>=1.26", "gymnasium>=1.2"]

[tool.setuptools]
package-dir = {"" = "."}
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["robot_sim*"]

[tool.setuptools.package-data]
robot_sim = ["_native/*.dll"]
